// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuotaOriginFormset renders empty formset when no initial data 1`] = `
<div
  aria-live="polite"
>
  <button
    className="govuk-button govuk-button--secondary"
    onClick={[Function]}
  >
    Add another origin
  </button>
</div>
`;

exports[`QuotaOriginFormset renders formset with props 1`] = `
<div
  aria-live="polite"
>
  <div>
    <h3
      className="govuk-heading-m"
    >
      Origin 
      1
    </h3>
    <input
      name="origins-0-pk"
      type="hidden"
      value={1}
    />
    <div
      className="govuk-form-group"
    >
      <div
        className="src__StyledContainer-sc-1l2t4xv-0 kSOVkC"
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        >
          <legend
            className="legend__StyledLegend-sc-12rap65-0 deblVS"
            size="S"
          >
            Start date
          </legend>
        </span>
        <div
          className="input__StyledList-sc-una33r-1 UBJjX"
        >
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Day
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-0-start_date_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Month
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-0-start_date_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL kjRNx"
            error={false}
            year={true}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Year
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={2000}
              error={false}
              name="origins-0-start_date_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-form-group"
    >
      <div
        className="src__StyledContainer-sc-1l2t4xv-0 kSOVkC"
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        >
          <legend
            className="legend__StyledLegend-sc-12rap65-0 deblVS"
            size="S"
          >
            End date
          </legend>
        </span>
        <span
          className="src__HintText-sc-tq1z5r-0 hIpBPn"
        >
          Leave empty if a quota order number origin is needed for an unlimited time
        </span>
        <div
          className="input__StyledList-sc-una33r-1 UBJjX"
        >
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Day
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-0-end_date_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Month
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-0-end_date_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL kjRNx"
            error={false}
            year={true}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Year
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={2010}
              error={false}
              name="origins-0-end_date_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-form-group"
    >
      <legend
        className="legend__StyledLegend-sc-12rap65-0 deblVS"
        size="S"
      >
        Geographical area
      </legend>
      <label
        className="src__Label-sc-iqzvxn-0 eTSPOL"
        defaultValue={1}
        error={false}
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        />
        <select
          className="src__StyledSelect-sc-sgud4a-0 lmpfTQ"
          defaultValue={1}
          error={false}
          name="origins-0-geographical_area"
          onChange={[Function]}
        >
          <option
            value={1}
          />
          <option
            value={2}
          />
          <option
            value={3}
          />
          <option
            value={4}
          />
          <option
            value={5}
          />
        </select>
      </label>
    </div>
    <div
      className="govuk-form-group"
    >
      <div
        className="govuk-hint"
      >
        Select one or more countries to be excluded:
      </div>
      <div
        className="react-select-container css-b62m3t-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="react-select__control css-13cymwt-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container react-select__value-container--is-multi css-1fdsijx-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1jqq78o-placeholder"
              id="react-select-2-placeholder"
            >
              Select...
            </div>
            <div
              className="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-2-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className="react-select__input"
                disabled={false}
                id="react-select-2-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className="react-select__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-tj5bde-Svg"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input
            name="origin-exclusions"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
    <input
      name="origins-0-exclusions-0-pk"
      type="hidden"
      value={1}
    />
    <input
      name="origins-0-exclusions-0-geographical_area"
      type="hidden"
      value={
        {
          "id": 3,
          "pk": 1,
        }
      }
    />
    <input
      name="origins-0-exclusions-1-pk"
      type="hidden"
      value={2}
    />
    <input
      name="origins-0-exclusions-1-geographical_area"
      type="hidden"
      value={
        {
          "id": 4,
          "pk": 2,
        }
      }
    />
    <hr
      className="govuk-!-margin-top-3"
    />
  </div>
  <div>
    <h3
      className="govuk-heading-m"
    >
      Origin 
      2
    </h3>
    <input
      name="origins-1-pk"
      type="hidden"
      value={2}
    />
    <div
      className="govuk-form-group"
    >
      <div
        className="src__StyledContainer-sc-1l2t4xv-0 kSOVkC"
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        >
          <legend
            className="legend__StyledLegend-sc-12rap65-0 deblVS"
            size="S"
          >
            Start date
          </legend>
        </span>
        <div
          className="input__StyledList-sc-una33r-1 UBJjX"
        >
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Day
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-1-start_date_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Month
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-1-start_date_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL kjRNx"
            error={false}
            year={true}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Year
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={2000}
              error={false}
              name="origins-1-start_date_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-form-group"
    >
      <div
        className="src__StyledContainer-sc-1l2t4xv-0 kSOVkC"
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        >
          <legend
            className="legend__StyledLegend-sc-12rap65-0 deblVS"
            size="S"
          >
            End date
          </legend>
        </span>
        <span
          className="src__HintText-sc-tq1z5r-0 hIpBPn"
        >
          Leave empty if a quota order number origin is needed for an unlimited time
        </span>
        <div
          className="input__StyledList-sc-una33r-1 UBJjX"
        >
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Day
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-1-end_date_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Month
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-1-end_date_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL kjRNx"
            error={false}
            year={true}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Year
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={2010}
              error={false}
              name="origins-1-end_date_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-form-group"
    >
      <legend
        className="legend__StyledLegend-sc-12rap65-0 deblVS"
        size="S"
      >
        Geographical area
      </legend>
      <label
        className="src__Label-sc-iqzvxn-0 eTSPOL"
        defaultValue={2}
        error={false}
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        />
        <select
          className="src__StyledSelect-sc-sgud4a-0 lmpfTQ"
          defaultValue={2}
          error={false}
          name="origins-1-geographical_area"
          onChange={[Function]}
        >
          <option
            value={1}
          />
          <option
            value={2}
          />
          <option
            value={3}
          />
          <option
            value={4}
          />
          <option
            value={5}
          />
        </select>
      </label>
    </div>
    <div
      className="govuk-form-group"
    >
      <div
        className="govuk-hint"
      >
        Select one or more countries to be excluded:
      </div>
      <div
        className="react-select-container css-b62m3t-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="react-select__control css-13cymwt-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container react-select__value-container--is-multi css-1fdsijx-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1jqq78o-placeholder"
              id="react-select-3-placeholder"
            >
              Select...
            </div>
            <div
              className="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-3-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className="react-select__input"
                disabled={false}
                id="react-select-3-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className="react-select__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-tj5bde-Svg"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input
            name="origin-exclusions"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="govuk-button govuk-button--secondary"
      onClick={[Function]}
    >
      Delete this 
      origin
    </button>
    <input
      name="origins-1-exclusions-0-pk"
      type="hidden"
      value={3}
    />
    <input
      name="origins-1-exclusions-0-geographical_area"
      type="hidden"
      value={
        {
          "id": 5,
          "pk": 3,
        }
      }
    />
    <hr
      className="govuk-!-margin-top-3"
    />
  </div>
  <button
    className="govuk-button govuk-button--secondary"
    onClick={[Function]}
  >
    Add another origin
  </button>
</div>
`;

exports[`QuotaOriginFormset renders with formset errors 1`] = `
<div
  aria-live="polite"
>
  <div>
    <h3
      className="govuk-heading-m"
    >
      Origin 
      1
    </h3>
    <input
      name="origins-0-pk"
      type="hidden"
      value={1}
    />
    <div
      className="govuk-form-group"
    >
      <div
        className="src__StyledContainer-sc-1l2t4xv-0 kSOVkC"
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        >
          <legend
            className="legend__StyledLegend-sc-12rap65-0 deblVS"
            size="S"
          >
            Start date
          </legend>
        </span>
        <div
          className="input__StyledList-sc-una33r-1 UBJjX"
        >
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Day
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-0-start_date_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Month
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-0-start_date_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL kjRNx"
            error={false}
            year={true}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Year
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={2000}
              error={false}
              name="origins-0-start_date_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-form-group"
    >
      <div
        className="src__StyledContainer-sc-1l2t4xv-0 fRmhSy"
        errorText="The end date must be the same as or after the start date."
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        >
          <legend
            className="legend__StyledLegend-sc-12rap65-0 deblVS"
            size="S"
          >
            End date
          </legend>
        </span>
        <span
          className="src__HintText-sc-tq1z5r-0 hIpBPn"
        >
          Leave empty if a quota order number origin is needed for an unlimited time
        </span>
        <span
          className="src__ErrorText-sc-kkeaok-0 jnGTLR"
        >
          The end date must be the same as or after the start date.
        </span>
        <div
          className="input__StyledList-sc-una33r-1 UBJjX"
        >
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Day
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 gNcAQf"
              defaultValue={1}
              error={true}
              name="origins-0-end_date_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Month
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 gNcAQf"
              defaultValue={1}
              error={true}
              name="origins-0-end_date_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL kjRNx"
            error={false}
            year={true}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Year
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 gNcAQf"
              defaultValue={2010}
              error={true}
              name="origins-0-end_date_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-form-group"
    >
      <legend
        className="legend__StyledLegend-sc-12rap65-0 deblVS"
        size="S"
      >
        Geographical area
      </legend>
      <label
        className="src__Label-sc-iqzvxn-0 eTSPOL"
        defaultValue={1}
        error={false}
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        />
        <select
          className="src__StyledSelect-sc-sgud4a-0 lmpfTQ"
          defaultValue={1}
          error={false}
          name="origins-0-geographical_area"
          onChange={[Function]}
        >
          <option
            value={1}
          />
          <option
            value={2}
          />
          <option
            value={3}
          />
          <option
            value={4}
          />
          <option
            value={5}
          />
        </select>
      </label>
    </div>
    <div
      className="govuk-form-group"
    >
      <div
        className="govuk-hint"
      >
        Select one or more countries to be excluded:
      </div>
      <div
        className="react-select-container css-b62m3t-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-4-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="react-select__control css-13cymwt-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container react-select__value-container--is-multi css-1fdsijx-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1jqq78o-placeholder"
              id="react-select-4-placeholder"
            >
              Select...
            </div>
            <div
              className="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-4-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className="react-select__input"
                disabled={false}
                id="react-select-4-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className="react-select__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-tj5bde-Svg"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input
            name="origin-exclusions"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
    <input
      name="origins-0-exclusions-0-pk"
      type="hidden"
      value={1}
    />
    <input
      name="origins-0-exclusions-0-geographical_area"
      type="hidden"
      value={
        {
          "id": 3,
          "pk": 1,
        }
      }
    />
    <input
      name="origins-0-exclusions-1-pk"
      type="hidden"
      value={2}
    />
    <input
      name="origins-0-exclusions-1-geographical_area"
      type="hidden"
      value={
        {
          "id": 4,
          "pk": 2,
        }
      }
    />
    <hr
      className="govuk-!-margin-top-3"
    />
  </div>
  <div>
    <h3
      className="govuk-heading-m"
    >
      Origin 
      2
    </h3>
    <input
      name="origins-1-pk"
      type="hidden"
      value={2}
    />
    <div
      className="govuk-form-group"
    >
      <div
        className="src__StyledContainer-sc-1l2t4xv-0 kSOVkC"
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        >
          <legend
            className="legend__StyledLegend-sc-12rap65-0 deblVS"
            size="S"
          >
            Start date
          </legend>
        </span>
        <div
          className="input__StyledList-sc-una33r-1 UBJjX"
        >
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Day
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-1-start_date_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Month
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-1-start_date_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL kjRNx"
            error={false}
            year={true}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Year
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={2000}
              error={false}
              name="origins-1-start_date_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-form-group"
    >
      <div
        className="src__StyledContainer-sc-1l2t4xv-0 kSOVkC"
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        >
          <legend
            className="legend__StyledLegend-sc-12rap65-0 deblVS"
            size="S"
          >
            End date
          </legend>
        </span>
        <span
          className="src__HintText-sc-tq1z5r-0 hIpBPn"
        >
          Leave empty if a quota order number origin is needed for an unlimited time
        </span>
        <div
          className="input__StyledList-sc-una33r-1 UBJjX"
        >
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Day
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-1-end_date_0"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL bXvZdL"
            error={false}
            year={false}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Month
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={1}
              error={false}
              name="origins-1-end_date_1"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
          <label
            className="src__Label-sc-iqzvxn-0 input__StyledLabel-sc-una33r-0 eTSPOL kjRNx"
            error={false}
            year={true}
          >
            <span
              className="src__LabelText-sc-1lbxenh-0 jZJbVy"
            >
              Year
            </span>
            <input
              className="src__Input-sc-1ch9crp-0 esEbTY"
              defaultValue={2010}
              error={false}
              name="origins-1-end_date_2"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
            />
          </label>
        </div>
      </div>
    </div>
    <div
      className="govuk-form-group"
    >
      <legend
        className="legend__StyledLegend-sc-12rap65-0 deblVS"
        size="S"
      >
        Geographical area
      </legend>
      <label
        className="src__Label-sc-iqzvxn-0 eTSPOL"
        defaultValue={2}
        error={false}
      >
        <span
          className="src__LabelText-sc-1lbxenh-0 jZJbVy"
        />
        <select
          className="src__StyledSelect-sc-sgud4a-0 lmpfTQ"
          defaultValue={2}
          error={false}
          name="origins-1-geographical_area"
          onChange={[Function]}
        >
          <option
            value={1}
          />
          <option
            value={2}
          />
          <option
            value={3}
          />
          <option
            value={4}
          />
          <option
            value={5}
          />
        </select>
      </label>
    </div>
    <div
      className="govuk-form-group"
    >
      <div
        className="govuk-hint"
      >
        Select one or more countries to be excluded:
      </div>
      <div
        className="react-select-container css-b62m3t-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-5-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="react-select__control css-13cymwt-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="react-select__value-container react-select__value-container--is-multi css-1fdsijx-ValueContainer"
          >
            <div
              className="react-select__placeholder css-1jqq78o-placeholder"
              id="react-select-5-placeholder"
            >
              Select...
            </div>
            <div
              className="react-select__input-container css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-describedby="react-select-5-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className="react-select__input"
                disabled={false}
                id="react-select-5-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="react-select__indicators css-1hb7zxy-IndicatorsContainer"
          >
            <span
              className="react-select__indicator-separator css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
              className="react-select__indicator react-select__dropdown-indicator css-1xc3v61-indicatorContainer"
              onMouseDown={[Function]}
              onTouchEnd={[Function]}
            >
              <svg
                aria-hidden="true"
                className="css-tj5bde-Svg"
                focusable="false"
                height={20}
                viewBox="0 0 20 20"
                width={20}
              >
                <path
                  d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <input
            name="origin-exclusions"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="govuk-button govuk-button--secondary"
      onClick={[Function]}
    >
      Delete this 
      origin
    </button>
    <input
      name="origins-1-exclusions-0-pk"
      type="hidden"
      value={3}
    />
    <input
      name="origins-1-exclusions-0-geographical_area"
      type="hidden"
      value={
        {
          "id": 5,
          "pk": 3,
        }
      }
    />
    <hr
      className="govuk-!-margin-top-3"
    />
  </div>
  <button
    className="govuk-button govuk-button--secondary"
    onClick={[Function]}
  >
    Add another origin
  </button>
</div>
`;
